SSCS-3236 Job scheduler JAR
- Add bintray config to job scheduler to allow it to be exported to a JAR

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,15 +7,23 @@ before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 
+cache:
+  directories:
+    - $HOME/.gradle/caches/
+    - $HOME/.gradle/wrapper/
+
 before_install:
   - curl https://raw.githubusercontent.com/hmcts/reform-api-docs/master/bin/publish-swagger-docs.sh > publish-swagger-docs.sh
   - sudo apt-get install jq
   - wget -O ./codacy-coverage-reporter-assembly-latest.jar $(curl https://api.github.com/repos/codacy/codacy-coverage-reporter/releases/latest | jq -r .assets[0].browser_download_url)
 
-cache:
-  directories:
-    - $HOME/.gradle/caches/
-    - $HOME/.gradle/wrapper/
+deploy:
+- provider: script
+  script: ./gradlew bintrayUpload
+  skip_cleanup: true
+  on:
+    repo: hmcts/sscs-job-scheduler
+    tags: true
 
 script:
   - ./gradlew test
