--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,11 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.17.0'
   id 'org.sonarqube' version '2.6.1'
   id "org.flywaydb.flyway" version "5.0.7"
+  id 'com.jfrog.bintray' version '1.8.0' apply true
 }
 
 group = 'uk.gov.hmcts.reform'
-version = '0.0.1'
+version = '1.0.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -136,6 +137,23 @@ repositories {
   }
 }
 
+bintray {
+  user = System.getenv('BINTRAY_USER')
+  key = System.getenv('BINTRAY_KEY')
+  publications = ['Main']
+  publish = true
+  pkg {
+    repo = 'hmcts-maven'
+    name = 'sscs-job-scheduler'
+    userOrg = 'hmcts'
+    licenses = ['MIT']
+    vcsUrl = 'https://github.com/hmcts/sscs-job-scheduler'
+    version {
+      name = project.version
+    }
+  }
+}
+
 def versions = [
   reformLogging: '2.0.2',
   springBoot: plugins.getPlugin('org.springframework.boot').class.package.implementationVersion
@@ -187,7 +205,7 @@ dependencies {
 }
 
 jar {
-  archiveName 'job-scheduler.jar'
+  archiveName 'sscs-job-scheduler.jar'
 
   manifest {
     attributes('Implementation-Version': project.version.toString())
