--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@ plugins {
   id 'com.github.ben-manes.versions' version '0.17.0'
   id 'org.sonarqube' version '2.6.1'
   id "org.flywaydb.flyway" version "5.0.7"
+  id 'maven'
+  id 'maven-publish'
   id 'com.jfrog.bintray' version '1.8.0' apply true
 }
 
@@ -36,6 +38,16 @@ sourceSets {
     }
     resources.srcDir file('src/smokeTest/resources')
   }
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+  classifier = 'javadoc'
+  from javadoc.destinationDir
 }
 
 compileJava {
@@ -134,6 +146,27 @@ repositories {
 
   maven {
     url "https://dl.bintray.com/hmcts/hmcts-maven"
+  }
+}
+
+publishing {
+  publications {
+    Main(MavenPublication) {
+      from components.java
+      artifact sourcesJar
+      artifact javadocJar
+      groupId project.group
+      artifactId 'sscs-job-scheduler'
+      version project.version
+
+      pom.withXml {
+        def root = asNode()
+        root.appendNode('description', 'SSCS job scheduler')
+        root.appendNode('name', 'SSCS job scheduler')
+        root.appendNode('url', 'https://github.com/hmcts/sscs-job-scheduler')
+        root.children().last() + pomConfig
+      }
+    }
   }
 }
 
