--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,30 +15,6 @@ idam:
 spring:
   application:
     name: Job Scheduler
-  datasource:
-    driverClassName: org.postgresql.Driver
-    url: jdbc:postgresql://${JOB_SCHEDULER_DB_HOST:job-scheduler-database}:${JOB_SCHEDULER_DB_PORT:5432}/${JOB_SCHEDULER_DB_NAME:jobscheduler}${JOB_SCHEDULER_DB_CONNECTION_OPTIONS:}
-    username: ${JOB_SCHEDULER_DB_USERNAME:jobscheduler}
-    password: ${JOB_SCHEDULER_DB_PASSWORD:}
-    properties:
-      charSet: UTF-8
-    # http://tomcat.apache.org/tomcat-7.0-doc/jdbc-pool.html#Common_Attributes
-    tomcat:
-      max-active: 10
-      max-idle: 10
-      min-idle: 2
-      max-wait: 10000
-      test-on-borrow: true
-      test-on-connect: true
-      test-on-idle: true
-      validation-query: "SELECT 1"
-      time-between-eviction-runs-millis: 10000
-      test-while-idle: true
-      test-on-return: true
-      remove-abandoned: true
-      remove-abandoned-timeout: 60
-      log-abandoned: true
-      abandon-when-percentage-full: 0
 
 quartzProperties:
   org.quartz:
@@ -54,7 +30,7 @@ quartzProperties:
       isClustered: true
       class: org.quartz.impl.jdbcjobstore.JobStoreTX
       driverDelegateClass: org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
-      dataSource: jobscheduler
+      dataSource: sscsjobscheduler
     threadPool:
       class: org.quartz.simpl.SimpleThreadPool
       threadCount: 8
