--- a/build.gradle
+++ b/build.gradle
@@ -66,8 +66,6 @@ task functional(type: Test) {
   description = "Runs Functional Tests"
   testClassesDirs = sourceSets.functionalTest.output.classesDirs
   classpath = sourceSets.functionalTest.runtimeClasspath
-
-  environment("APPINSIGHTS_INSTRUMENTATIONKEY", "some-key")
 }
 
 compileSmokeTestJava {
@@ -177,13 +175,6 @@ def versions = [
 ]
 
 dependencies {
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: versions.springBoot
-  // compile group: 'org.springframework.boot', name: 'spring-boot-starter-quartz', version: versions.springBoot
-  // todo: use spring-boot-starter-quartz after migrating to Spring Boot 2
-
   compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
   compile group: 'org.flywaydb', name: 'flyway-core', version: '5.0.2'
 
@@ -194,8 +185,9 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-appinsights', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version: '1.1.0'
-  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '0.4.2'
   compile group: 'uk.gov.hmcts.reform', name: 'reform-api-standards', version: '0.3.0'
+
+  compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.2.RELEASE'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version: '1.4.3.RELEASE'
@@ -205,17 +197,14 @@ dependencies {
   compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
 
-  testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
   testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.0'
   testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.12.0'
   testCompile group: 'org.json', name: 'json', version: '20171018'
 
   functionalTestCompile sourceSets.main.runtimeClasspath
-  functionalTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
 
   smokeTestCompile sourceSets.main.runtimeClasspath
   smokeTestCompile group: 'io.rest-assured', name: 'rest-assured', version: '3.0.7'
-  smokeTestCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
 
 }
 
