--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,12 @@
 plugins {
-  id 'application'
+  id 'java-library'
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.4.RELEASE'
-  id 'org.springframework.boot' version '1.5.10.RELEASE'
   id 'org.owasp.dependencycheck' version '3.1.1'
   id 'com.github.ben-manes.versions' version '0.17.0'
   id 'org.sonarqube' version '2.6.1'
-  id "org.flywaydb.flyway" version "5.0.7"
   id 'maven'
   id 'maven-publish'
   id 'com.jfrog.bintray' version '1.8.0' apply true
@@ -19,6 +17,8 @@ version = '1.0.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+def springBootVersion = '1.5.10.RELEASE'
 
 sourceSets {
 
@@ -171,15 +171,13 @@ bintray {
 
 def versions = [
   reformLogging: '2.0.2',
-  springBoot: plugins.getPlugin('org.springframework.boot').class.package.implementationVersion
+  springBoot      : springBootVersion,
 ]
 
 dependencies {
   compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.0'
-  compile group: 'org.flywaydb', name: 'flyway-core', version: '5.0.2'
 
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
-  compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310'
 
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-spring', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: versions.reformLogging
@@ -189,17 +187,17 @@ dependencies {
 
   compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
+  compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
+  compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.2.RELEASE'
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version: '1.4.3.RELEASE'
 
-  compile group: 'org.springframework.data', name: 'spring-data-commons', version: '1.13.9.RELEASE'
-
-  compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.8.0'
-  compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.8.0'
+  compile group: 'org.springframework', name: 'spring-tx', version: '5.0.6.RELEASE'
 
   testCompile group: 'org.assertj', name: 'assertj-core', version: '3.9.0'
   testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.12.0'
   testCompile group: 'org.json', name: 'json', version: '20171018'
+  testCompile group: 'org.mockito', name: 'mockito-core', version: '1.10.19'
 
   functionalTestCompile sourceSets.main.runtimeClasspath
 
