--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,33 +1,25 @@
-server:
-  port: 8484
 
-management:
-  security:
-    enabled: ${MANAGEMENT_SECURITY_ENABLED:true}
-
-spring:
-  application:
-    name: Job Scheduler
-
-quartzProperties:
-  org.quartz:
-    scheduler:
-      instanceId: AUTO
-    dataSource:
-      jobscheduler:
-        driver: org.postgresql.Driver
-        URL: ${spring.datasource.url}
-        user: ${spring.datasource.username}
-        password: ${spring.datasource.password}
-    jobStore:
-      isClustered: true
-      class: org.quartz.impl.jdbcjobstore.JobStoreTX
-      driverDelegateClass: org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
-      dataSource: sscsjobscheduler
-    threadPool:
-      class: org.quartz.simpl.SimpleThreadPool
-      threadCount: 8
-
-retryPolicy:
-  maxNumberOfJobExecutions: ${MAX_NUMBER_OF_JOB_EXECUTIONS:5}
-  delayBetweenAttemptsInMs: ${DELAY_BETWEEN_JOB_ATTEMPTS_MS:15000}
+#
+#quartzProperties:
+#  org.quartz:
+#    scheduler:
+#      instanceId: AUTO
+#    dataSource:
+#      jobscheduler:
+#        driver: org.postgresql.Driver
+#        URL: ${spring.datasource.url}
+#        user: ${spring.datasource.username}
+#        password: ${spring.datasource.password}
+#    jobStore:
+#      isClustered: true
+#      class: org.quartz.impl.jdbcjobstore.JobStoreTX
+#      driverDelegateClass: org.quartz.impl.jdbcjobstore.PostgreSQLDelegate
+#      dataSource: sscsjobscheduler
+#    threadPool:
+#      class: org.quartz.simpl.SimpleThreadPool
+#      threadCount: 8
+#
+#retryPolicy:
+#  maxNumberOfJobExecutions: ${MAX_NUMBER_OF_JOB_EXECUTIONS:5}
+#  delayBetweenAttemptsInMs: ${DELAY_BETWEEN_JOB_ATTEMPTS_MS:15000}
+#
