--- a/src/functionalTest/resources/application.yaml
+++ b/src/functionalTest/resources/application.yaml
@@ -1,13 +1,13 @@
 
 spring.application.name: test
 
-quartzProperties:
-  org.quartz:
-    scheduler:
-      instanceId: AUTO
-    jobStore:
-      class: org.quartz.simpl.RAMJobStore
-
-retryPolicy:
-  maxNumberOfJobExecutions: 2
-  delayBetweenAttemptsInMs: 1000
+job.scheduler:
+  quartzProperties:
+    org.quartz:
+      scheduler:
+        instanceId: AUTO
+      jobStore:
+        class: org.quartz.simpl.RAMJobStore
+  retryPolicy:
+    maxNumberOfJobExecutions: 2
+    delayBetweenAttemptsInMs: 1000
