--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ deploy:
     tags: true
 script:
 - "./gradlew test"
-- "./gradlew functional"
+- "./gradlew integration"
 - "./gradlew jacocoTestReport"
 after_success:
 - java -cp ./codacy-coverage-reporter-assembly-latest.jar com.codacy.CodacyCoverageReporter
