--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group = 'uk.gov.hmcts.reform'
-version = '1.2.0'
+version = '1.3.0'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -120,8 +120,8 @@ dependencyCheck {
 }
 
 repositories {
+  mavenLocal()
   jcenter()
-
   maven {
     url "https://dl.bintray.com/hmcts/hmcts-maven"
   }
