--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ plugins {
 }
 
 group = 'uk.gov.hmcts.reform'
-version = '1.5.2'
+version = '1.5.3'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -177,14 +177,15 @@ dependencies {
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-httpcomponents', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'java-logging-appinsights', version: versions.reformLogging
   compile group: 'uk.gov.hmcts.reform', name: 'http-proxy-spring-boot-autoconfigure', version: '1.1.0'
-  compile group: 'uk.gov.hmcts.reform', name: 'reform-api-standards', version: '0.3.0'
 
   compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
   compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.2.RELEASE'
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version: '1.4.3.RELEASE'
+  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix', version: '1.4.6.RELEASE'
+
+  def withoutTomcat = { exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat' }
+  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-hystrix-dashboard', version: '1.4.6.RELEASE', withoutTomcat 
 
   compile group: 'org.springframework', name: 'spring-tx', version: '5.0.6.RELEASE'
 
