--- a/build.gradle
+++ b/build.gradle
@@ -156,7 +156,7 @@ dependencies {
   compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
   compile group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
-  compile group: 'uk.gov.hmcts.reform', name: 'reform-api-standards', version: '0.3.0'
+  compile group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.4.0'
 
   compile group: 'javax.inject', name: 'javax.inject', version: '1'
 
