--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,6 @@ plugins {
   id 'org.owasp.dependencycheck' version '6.0.3'
   id 'com.github.ben-manes.versions' version '0.36.0'
   id 'org.sonarqube' version '3.0'
-  id 'maven'
   id 'maven-publish'
 }
 
@@ -17,8 +16,11 @@ def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?:
 group = 'com.github.hmcts'
 version = buildNumber
 
-sourceCompatibility = 11
-targetCompatibility = 11
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
 
 def springBootVersion = '2.3.5.RELEASE'
 
@@ -35,13 +37,15 @@ sourceSets {
   }
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
-  classifier = 'sources'
+tasks.register('sourcesJar', Jar) {
+  dependsOn classes
+  archiveClassifier = 'sources'
   from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
-  classifier = 'javadoc'
+tasks.register('javadocJar', Jar) {
+  dependsOn javadoc
+  archiveClassifier = 'javadoc'
   from javadoc.destinationDir
 }
 
@@ -57,7 +61,7 @@ compileIntegrationTestJava {
   options.compilerArgs << "-Xlint:unchecked"
 }
 
-task integration(type: Test) {
+tasks.register('integration', Test) {
   description = "Runs Integration Tests"
   testClassesDirs = sourceSets.integrationTest.output.classesDirs
   classpath = sourceSets.integrationTest.runtimeClasspath
@@ -66,7 +70,7 @@ task integration(type: Test) {
 checkstyle {
   toolVersion = '8.4'
   // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
-  configDir = new File(rootDir, 'config/checkstyle')
+  configDirectory = new File(rootDir, 'config/checkstyle')
 }
 
 pmd {
@@ -98,7 +102,6 @@ dependencyCheck {
 repositories {
   mavenCentral()
   mavenLocal()
-  jcenter()
   mavenCentral()
 
   maven {
@@ -130,7 +133,7 @@ def versions = [
   springBoot   : springBootVersion,
 ]
 
-configurations.all {
+configurations.configureEach {
   resolutionStrategy {
     eachDependency { DependencyResolveDetails details ->
       if (details.requested.group in ['com.fasterxml.jackson.core', 'com.fasterxml.jackson.module', 'com.fasterxml.jackson.datatype']) {
@@ -153,31 +156,31 @@ dependencyManagement {
 }
 
 dependencies {
-  compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
+  implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
-  compile group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
-  compile group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.4.0'
+  implementation group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
+  implementation group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.4.0'
 
-  compile group: 'javax.inject', name: 'javax.inject', version: '1'
+  implementation group: 'javax.inject', name: 'javax.inject', version: '1'
 
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
-  compile group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
-  compile group: 'org.springframework', name: 'spring-context-support', version: '5.2.12.RELEASE'
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
+  implementation group: 'org.springframework', name: 'spring-context-support', version: '5.2.12.RELEASE'
 
-  compile group: 'org.springframework', name: 'spring-tx', version: '5.2.12.RELEASE'
+  implementation group: 'org.springframework', name: 'spring-tx', version: '5.2.12.RELEASE'
 
-  testCompile group: 'junit', name: 'junit', version: 4.12
-  testCompile group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
-  testCompile group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.27.2'
-  testCompile group: 'org.json', name: 'json', version: '20201115'
-  testCompile group: 'org.mockito', name: 'mockito-core', version: '3.6.28'
-  testCompile group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.28'
-  testCompile 'pl.pragmatists:JUnitParams:1.1.1'
-  testCompile "org.junit.jupiter:junit-jupiter-api:5.7.0"
-  testRuntime "org.junit.jupiter:junit-jupiter-engine:5.6.2"
+  testImplementation group: 'junit', name: 'junit', version: 4.12
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.27.2'
+  testImplementation group: 'org.json', name: 'json', version: '20201115'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.6.28'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.28'
+  testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
+  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
   testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
 
-  integrationTestCompile sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.main.runtimeClasspath
 }
 
