--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.0.10.RELEASE'
-  id 'org.owasp.dependencycheck' version '6.0.3'
-  id 'com.github.ben-manes.versions' version '0.36.0'
-  id 'org.sonarqube' version '3.0'
+  id 'io.spring.dependency-management' version '1.1.6'
+  id 'org.owasp.dependencycheck' version '10.0.4'
+  id 'com.github.ben-manes.versions' version '0.51.0'
+  id 'org.sonarqube' version '4.3.0.3225'
   id 'maven-publish'
 }
 
@@ -21,9 +21,6 @@ java {
     languageVersion = JavaLanguageVersion.of(17)
   }
 }
-
-def springBootVersion = '2.3.5.RELEASE'
-
 
 sourceSets {
 
@@ -68,26 +65,44 @@ tasks.register('integration', Test) {
 }
 
 checkstyle {
-  toolVersion = '8.4'
+  toolVersion = '9.3'
   // need to set configDir to rootDir otherwise submodule will use submodule/config/checkstyle
   configDirectory = new File(rootDir, 'config/checkstyle')
 }
 
 pmd {
-  toolVersion = "6.19.0"
+  toolVersion = "6.55.0"
   ignoreFailures = true
   sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest]
-  reportsDir = file("$project.buildDir/reports/pmd")
+  reportsDir = layout.buildDirectory.dir("reports/pmd").get().asFile
   ruleSetFiles = files("config/pmd/ruleset.xml")
 }
 
-project.tasks['sonarqube'].dependsOn test, integration
+jacoco {
+  toolVersion = "0.8.10"
+}
+
+jacocoTestReport {
+  executionData(test, integration)
+  reports {
+    xml.required = true
+    csv.required = false
+    xml.outputLocation = layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml")
+  }
+}
+
+project.tasks.named('sonarqube') {
+  dependsOn test, integration, jacocoTestReport
+}
+
 sonarqube {
   properties {
-    property "sonar.projectName", "Reform :: SSCS job scheduler"
-    property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
-    property "sonar.jacoco.itReportPath", "${project.buildDir}/jacoco/integration.exec"
-    property 'sonar.coverage.exclusions', "**/src/main/java/uk/gov/hmcts/reform/sscs/jobscheduler/config/**"
+    property "sonar.projectName", "SSCS - SSCS job scheduler"
+    property "sonar.projectKey", "SSCSJS"
+    property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.outputLocation}"
+    property "sonar.exclusions", "**/src/main/java/uk/gov/hmcts/reform/sscs/jobscheduler/config/**"
+    property "sonar.pitest.mode", "reuseReport"
+    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
   }
 }
 
@@ -96,7 +111,28 @@ dependencyCheck {
   // Specifies if the build should be failed if a CVSS score above a specified level is identified.
   // range of 0-10 fails the build, anything greater and it doesn't fail the build
   failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
-  suppressionFile = 'dependency-check-suppressions.xml'
+  suppressionFile = 'config/owasp/suppressions.xml'
+
+  analyzers {
+    retirejs {
+      enabled = false
+    }
+    ossIndex {
+      enabled = false
+    }
+    // Disable scanning of .NET related binaries
+    assemblyEnabled = false
+  }
+}
+
+tasks.withType(Copy).configureEach { duplicatesStrategy DuplicatesStrategy.WARN }
+
+tasks.withType(Test).configureEach {
+  useJUnitPlatform()
+
+  testLogging {
+    exceptionFormat = 'full'
+  }
 }
 
 repositories {
@@ -127,12 +163,6 @@ publishing {
   }
 }
 
-
-def versions = [
-  reformLogging   : '5.1.7',
-  springBoot   : springBootVersion,
-]
-
 configurations.configureEach {
   resolutionStrategy {
     eachDependency { DependencyResolveDetails details ->
@@ -143,44 +173,81 @@ configurations.configureEach {
   }
 }
 
+configurations.configureEach {
+    resolutionStrategy {
+        eachDependency { DependencyResolveDetails details ->
+            if (details.requested.group in ['com.fasterxml.jackson.core', 'com.fasterxml.jackson.module', 'com.fasterxml.jackson.datatype']) {
+                details.useVersion '2.17.2'
+            }
+        }
+    }
+}
+
 dependencyManagement {
   dependencies {
 
-    // CVE-2019-0232, CVE-2019-0199 - command line injections on windows
-    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.40') {
+    // CVE-2023-1370
+    dependency group: 'net.minidev', name: 'json-smart', version: '2.5.1'
+
+    // CVE-2023-6378, CVE-2023-6481
+    dependencySet(group: 'ch.qos.logback', version: '1.2.13') {
+      entry 'logback-core'
+      entry 'logback-classic'
+    }
+
+    // CVE-2022-1471, CVE-2022-25857, CVE-2022-38749, CVE-2022-38751, CVE-2022-38752, CVE-2022-41854, CVE-2022-38750
+    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.0'
+
+    // CVE-2021-25122, CVE-2021-41079, CVE-2021-42340, CVE-2022-29885, CVE-2022-42252, CVE-2022-45143, CVE-2023-44487, CVE-2023-46589, CVE-2020-9484, CVE-2021-25329, CVE-2022-23181, CVE-2021-30640, CVE-2022-34305, CVE-2023-41080, CVE-2021-33037, CVE-2023-42795, CVE-2023-45648, CVE-2024-21733, CVE-2023-28708, CVE-2021-43980
+    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.86') {
       entry 'tomcat-embed-core'
-      entry 'tomcat-embed-el'
       entry 'tomcat-embed-websocket'
     }
   }
 }
 
+def versions = [
+        springBoot   : '2.7.18',
+]
+
 dependencies {
   implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
 
-  implementation group: 'com.github.hmcts', name: 'java-logging', version: versions.reformLogging
-  implementation group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.4.0'
+  implementation group: 'com.github.hmcts', name: 'java-logging', version: '6.1.6'
+  implementation group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.5.2', {
+    exclude group: 'com.google.guava', module: 'guava'
+  }
 
-  implementation group: 'javax.inject', name: 'javax.inject', version: '1'
+  implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+  implementation group: 'com.google.guava', name: 'guava', version: '33.3.1-jre'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
 
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
-  implementation group: 'org.springframework', name: 'spring-context-support', version: '5.2.12.RELEASE'
+  implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.39'
 
-  implementation group: 'org.springframework', name: 'spring-tx', version: '5.2.12.RELEASE'
+  implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.39'
 
-  testImplementation group: 'junit', name: 'junit', version: 4.12
-  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.18.1'
-  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '2.27.2'
-  testImplementation group: 'org.json', name: 'json', version: '20201115'
-  testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.6.28'
-  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.6.28'
-  testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-  testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.2"
-  testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.2"
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
+  testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '3.0.1'
+  testImplementation group: 'org.json', name: 'json', version: '20240303'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.13.0'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.13.0'
+  testImplementation group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.11.0'
+  testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.11.0'
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0'
+  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0'
 
+  integrationTestImplementation(sourceSets.test.output)
   integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
+  // CVE-2023-2976, CVE-2020-8908
+  checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: checkstyle.toolVersion
+  checkstyle group: 'com.google.guava', name: 'guava', version: '32.1.1-jre'
 }
 
