--- a/.github/workflows/jitpack_build.yml
+++ b/.github/workflows/jitpack_build.yml
@@ -18,9 +18,7 @@ jobs:
 
           PACKAGES_URL="https://jitpack.io/com/github/${GITHUB_REPOSITORY}/${GITHUB_REF#refs/tags/}/"
           PACKAGES_FILE="packages.txt"
- 
           touch ${PACKAGES_FILE}
-
           # Try the URL 6 times before failing
           count=1
           until [[ $count -gt 6 ]] || grep -q build.log ${PACKAGES_FILE} ; do
@@ -28,7 +26,7 @@ jobs:
             STATUS=$(curl -s -o packages.txt -w "%{http_code}" --max-time 900 ${PACKAGES_URL})
 
             let count+=1
-            if [[ ${STATUS} -gt 399 ]]; then
+            if [[ "${STATUS}" -gt 399 ]]; then
               sleep 30
             fi
           done
