--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,10 @@ plugins {
   id 'checkstyle'
   id 'pmd'
   id 'jacoco'
-  id 'io.spring.dependency-management' version '1.1.6'
-  id 'org.owasp.dependencycheck' version '10.0.4'
-  id 'com.github.ben-manes.versions' version '0.51.0'
-  id 'org.sonarqube' version '4.3.0.3225'
+  id 'io.spring.dependency-management' version '1.1.7'
+  id 'org.owasp.dependencycheck' version '12.1.1'
+  id 'com.github.ben-manes.versions' version '0.52.0'
+  id 'org.sonarqube' version '6.2.0.5505'
   id 'maven-publish'
 }
 
@@ -65,12 +65,12 @@ tasks.register('integration', Test) {
 }
 
 checkstyle {
-  toolVersion = '9.3'
+  toolVersion = '10.12.4'
   getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
 }
 
 pmd {
-  toolVersion = "6.55.0"
+  toolVersion = "7.13.0"
   ignoreFailures = true
   sourceSets = [sourceSets.main, sourceSets.test, sourceSets.integrationTest]
   reportsDir = layout.buildDirectory.dir("reports/pmd").get().asFile
@@ -78,7 +78,7 @@ pmd {
 }
 
 jacoco {
-  toolVersion = "0.8.10"
+  toolVersion = "0.8.13"
 }
 
 jacocoTestReport {
@@ -178,44 +178,27 @@ publishing {
 }
 
 configurations.configureEach {
-    resolutionStrategy {
-        eachDependency { DependencyResolveDetails details ->
-            if (details.requested.group in ['com.fasterxml.jackson.core', 'com.fasterxml.jackson.module', 'com.fasterxml.jackson.datatype']) {
-                details.useVersion '2.17.2'
-            }
-        }
+  resolutionStrategy {
+    eachDependency { DependencyResolveDetails details ->
+      if (details.requested.group in ['com.fasterxml.jackson.core', 'com.fasterxml.jackson.module', 'com.fasterxml.jackson.datatype']) {
+        details.useVersion '2.19.0'
+      }
     }
+  }
 }
 
 dependencyManagement {
   dependencies {
 
-    // CVE-2023-1370
-    dependency group: 'net.minidev', name: 'json-smart', version: '2.5.1'
-
-    // CVE-2023-6378, CVE-2023-6481
-    dependencySet(group: 'ch.qos.logback', version: '1.5.6') {
-      entry 'logback-core'
-      entry 'logback-classic'
-    }
-
-    // CVE-2022-1471, CVE-2022-25857, CVE-2022-38749, CVE-2022-38751, CVE-2022-38752, CVE-2022-41854, CVE-2022-38750
-    dependency group: 'org.yaml', name: 'snakeyaml', version: '2.0'
-
-    // CVE-2021-25122, CVE-2021-41079, CVE-2021-42340, CVE-2022-29885, CVE-2022-42252, CVE-2022-45143, CVE-2023-44487, CVE-2023-46589, CVE-2020-9484, CVE-2021-25329, CVE-2022-23181, CVE-2021-30640, CVE-2022-34305, CVE-2023-41080, CVE-2021-33037, CVE-2023-42795, CVE-2023-45648, CVE-2024-21733, CVE-2023-28708, CVE-2021-43980
-    dependencySet(group: 'org.apache.tomcat.embed', version: '9.0.86') {
-      entry 'tomcat-embed-core'
-      entry 'tomcat-embed-websocket'
-    }
   }
 }
 
 def versions = [
-        springBoot   : '3.3.5',
+        springBoot   : '3.4.5',
 ]
 
 dependencies {
-  implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.3.2'
+  implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.5.0'
 
   implementation group: 'com.github.hmcts.java-logging', name: 'logging', version: '6.1.9'
   implementation group: 'com.github.hmcts', name: 'reform-api-standards', version: '0.5.2', {
@@ -223,35 +206,31 @@ dependencies {
   }
 
   implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
-  implementation group: 'com.google.guava', name: 'guava', version: '33.3.1-jre'
-  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '7.4'
+  implementation group: 'com.google.guava', name: 'guava', version: '33.4.8-jre'
+  implementation group: 'net.logstash.logback', name: 'logstash-logback-encoder', version: '8.1'
 
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: versions.springBoot
-  implementation group: 'org.springframework', name: 'spring-context-support', version: '6.2.0'
+  implementation group: 'org.springframework', name: 'spring-context-support', version: '6.2.7'
 
-  implementation group: 'org.springframework', name: 'spring-tx', version: '6.2.0'
+  implementation group: 'org.springframework', name: 'spring-tx', version: '6.2.7'
 
-  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.26.3'
+  testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.3'
   testImplementation group: 'com.github.tomakehurst', name: 'wiremock-standalone', version: '3.0.1'
-  testImplementation group: 'org.json', name: 'json', version: '20240303'
-  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.13.0'
-  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.13.0'
+  testImplementation group: 'org.json', name: 'json', version: '20250517'
+  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.18.0'
+  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.18.0'
   testImplementation group: 'pl.pragmatists', name: 'JUnitParams', version: '1.1.1'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.11.0'
-  testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.11.0'
-  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.0'
-  testRuntimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.0'
+
+  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.12.2'
+  testImplementation group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.12.2'
+  testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: '1.12.2'
 
   integrationTestImplementation(sourceSets.test.output)
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
-
-  // CVE-2023-2976, CVE-2020-8908
-  checkstyle group: 'com.puppycrawl.tools', name: 'checkstyle', version: checkstyle.toolVersion
-  checkstyle group: 'com.google.guava', name: 'guava', version: '32.1.1-jre'
 }
 
